--- a/web/code/css/index.css
+++ b/web/code/css/index.css
@@ -38,3 +38,8 @@
     width: 60px;
     font-size: 16px;
 }
+.panel-body {padding:0px;}
+.panel-body table tr td {padding-left: 15px}
+.panel-body .table {margin-bottom: 0px;}
+div.panel{margin-bottom: 30px;}
+h1.title{margin-bottom: 20px;}
